--- a/projects/page-builder/src/lib/page-builder.html
+++ b/projects/page-builder/src/lib/page-builder.html
@@ -39,6 +39,6 @@
     <div class="placeholder" *ngxPlaceholder></div>
   </div>
 
-  <div class="properties">properties</div>
+  <block-properties class="properties"></block-properties>
 </div>
 <block-selector />
