--- a/projects/page-builder/src/lib/page-builder.html
+++ b/projects/page-builder/src/lib/page-builder.html
@@ -19,7 +19,11 @@
   </div>
   <div class="page-container" (click)="pageBuilderService.deSelectBlock()">
     {{ pageBuilderService.currentPageIndex() }}
-    <div class="paper">
+    <div
+      class="paper {{ pageBuilderService.pageInfo.config.size }} {{
+        pageBuilderService.pageInfo.config.orientation
+      }}"
+    >
       <div class="paper-inner">
         <table cellspacing="0" cellpadding="0" class="ngx-page-builder">
           <thead>
