--- a/projects/page-builder/src/lib/page-builder.html
+++ b/projects/page-builder/src/lib/page-builder.html
@@ -8,15 +8,17 @@
     [connectedTo]="[PageBody, PageHeader, PageFooter]"
     [disableSort]="true"
   >
-    @for (item of sources; track $index) {
-    <div
-      class="tool"
-      ngxDraggable
-      [innerHTML]="item.icon | safeHtml"
-      [title]="item.title"
-      (click)="preventDefault()"
-    ></div>
-    }
+    <div class="sticky-top">
+      @for (item of sources; track $index) {
+      <div
+        class="tool"
+        ngxDraggable
+        [innerHTML]="item.icon | safeHtml"
+        [title]="item.title"
+        (click)="preventDefault()"
+      ></div>
+      }
+    </div>
   </div>
   <div class="page-container" (click)="pageBuilderService.deSelectBlock()">
     <div
@@ -31,6 +33,7 @@
         [class.show-outlines]="pageBuilderService.showOutlines"
         ngxDropList
         [data]="pageBuilderService.currentPage.headerItems"
+        [class.is-empty]="pageBuilderService.currentPage.headerItems.length == 0"
         (drop)="onDrop($event, 'header')"
       >
         <div class="placeholder" *ngxPlaceholder></div>
@@ -51,6 +54,7 @@
         #PageFooter
         [class.show-outlines]="pageBuilderService.showOutlines"
         ngxDropList
+        [class.is-empty]="pageBuilderService.currentPage.footerItems.length == 0"
         [data]="pageBuilderService.currentPage.footerItems"
         (drop)="onDrop($event, 'footer')"
       >
