--- a/projects/page-builder/src/lib/page-builder.html
+++ b/projects/page-builder/src/lib/page-builder.html
@@ -1,4 +1,4 @@
-<div class="page-builder-container">
+<div class="page-builder-container ngx-page-builder">
   <toolbar></toolbar>
   <div
     class="components"
