--- a/projects/page-builder/src/lib/page-builder.html
+++ b/projects/page-builder/src/lib/page-builder.html
@@ -7,17 +7,15 @@
     [data]="pageBuilderService.sources"
     [disableSort]="true"
   >
-    <div class="sticky-top">
-      @for (item of pageBuilderService.sources; track $index) {
-        <div
-          class="tool"
-          ngxDraggable
-          [innerHTML]="item.icon | safeHtml"
-          [title]="item.title"
-          (click)="preventDefault()"
-        ></div>
-      }
-    </div>
+    @for (item of pageBuilderService.sources; track $index) {
+      <div
+        class="tool"
+        ngxDraggable
+        [innerHTML]="item.icon | safeHtml"
+        [title]="item.title"
+        (click)="preventDefault()"
+      ></div>
+    }
   </div>
   <div
     class="page-container full-height"
@@ -61,5 +59,5 @@
     <block-selector #blockSelector />
   </div>
 
-  <block-properties class="properties"></block-properties>
+  <side-config class="side-config"></side-config>
 </div>
