change svg icons to files

--- a/projects/page-builder/src/lib/page-builder.html
+++ b/projects/page-builder/src/lib/page-builder.html
@@ -8,13 +8,9 @@
     [disableSort]="true"
   >
     @for (item of pageBuilderService.sources; track $index) {
-      <div
-        class="tool"
-        ngxDraggable
-        [innerHTML]="item.icon | safeHtml"
-        [title]="item.title"
-        (click)="preventDefault()"
-      ></div>
+      <div class="tool" ngxDraggable [title]="item.title" (click)="preventDefault()">
+        <svg [Icon]="item.icon"></svg>
+      </div>
     }
   </div>
   <div
