Refactor code structure for improved readability and maintainability - fix bug on drop - add direction to main config

--- a/projects/page-builder/src/lib/page-builder.html
+++ b/projects/page-builder/src/lib/page-builder.html
@@ -23,6 +23,7 @@
       class="paper {{ pageBuilder.pageInfo.config.size }} {{
         pageBuilder.pageInfo.config.orientation
       }}"
+      [attr.dir]="pageBuilder.pageInfo.config.direction"
     >
       <div
         class="page-header"
