--- a/projects/page-builder/src/lib/page-builder.html
+++ b/projects/page-builder/src/lib/page-builder.html
@@ -20,20 +20,20 @@
   >
     <div
       [hidden]="pageBuilder.currentPageIndex() < 0"
-      class="paper {{ pageBuilder.pageInfo.config.size }} {{
-        pageBuilder.pageInfo.config.orientation
-      }}"
+      [class]="containerClassName"
       [attr.dir]="pageBuilder.pageInfo.config.direction"
     >
-      <div
-        class="page-header"
-        #PageHeader
-        [class.show-outlines]="pageBuilder.showOutlines"
-        ngxDropList
-        [data]="pageBuilder.currentPage.headerItems"
-        [class.is-empty]="pageBuilder.currentPage.headerItems.length == 0"
-        (drop)="pageBuilder.onDrop($event)"
-      ></div>
+      @if (viewMode == 'PrintPage') {
+        <div
+          class="page-header"
+          #PageHeader
+          [class.show-outlines]="pageBuilder.showOutlines"
+          ngxDropList
+          [data]="pageBuilder.currentPage.headerItems"
+          [class.is-empty]="pageBuilder.currentPage.headerItems.length == 0"
+          (drop)="pageBuilder.onDrop($event)"
+        ></div>
+      }
 
       <div
         class="page-body"
@@ -43,15 +43,18 @@
         [data]="pageBuilder.currentPage.bodyItems"
         (drop)="pageBuilder.onDrop($event)"
       ></div>
-      <div
-        class="page-footer"
-        #PageFooter
-        [class.show-outlines]="pageBuilder.showOutlines"
-        ngxDropList
-        [class.is-empty]="pageBuilder.currentPage.footerItems.length == 0"
-        [data]="pageBuilder.currentPage.footerItems"
-        (drop)="pageBuilder.onDrop($event)"
-      ></div>
+
+      @if (viewMode == 'PrintPage') {
+        <div
+          class="page-footer"
+          #PageFooter
+          [class.show-outlines]="pageBuilder.showOutlines"
+          ngxDropList
+          [class.is-empty]="pageBuilder.currentPage.footerItems.length == 0"
+          [data]="pageBuilder.currentPage.footerItems"
+          (drop)="pageBuilder.onDrop($event)"
+        ></div>
+      }
     </div>
     <block-selector #blockSelector />
   </div>
