--- a/projects/ngx-page-builder/src/lib/page-builder.html
+++ b/projects/ngx-page-builder/src/lib/page-builder.html
@@ -8,8 +8,8 @@
     [disableSort]="true"
   >
     @if (showPlugins) {
-      <div class="tool" (click)="viewPlugins()">
-        <svg Icon="assets/icons/plus.svg"></svg>
+      <div class="tool" (click)="viewPlugins()" title="Plugins">
+        <svg Icon="assets/icons/layer-plus.svg"></svg>
       </div>
     }
     @for (item of pageBuilder.sources; track $index) {
